fix error di swagger delete semua controller
