# app/Http/Controllers/OrderController.php
@@ -144,6 +144,12 @@ class OrderController extends Controller
 *            response=204,
 *            description="Order resource deleted.",
 *        ),
+*            @SWG\Parameter(
+*                name="Authorization",
+*                in="header",
+*                required=true,
+*                type="string"
+*            ),
 *        @SWG\Response(
 *            response=401,
 *            description="Unauthorized action.",
