# app/Http/Controllers/StagController.php
@@ -156,6 +156,12 @@ class StagController extends Controller
 *            response=204,
 *            description="Stag resource deleted.",
 *        ),
+*            @SWG\Parameter(
+*                name="Authorization",
+*                in="header",
+*                required=true,
+*                type="string"
+*            ),
 *        @SWG\Response(
 *            response=401,
 *            description="Unauthorized action.",
