# app/Http/Controllers/UserController.php
@@ -159,6 +159,12 @@ class UserController extends Controller
 *            response=204,
 *            description="User resource deleted.",
 *        ),
+*            @SWG\Parameter(
+*                name="Authorization",
+*                in="header",
+*                required=true,
+*                type="string"
+*            ),
 *        @SWG\Response(
 *            response=401,
 *            description="Unauthorized action.",
